--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,109 @@
-open_spiel
+absl-py==1.1.0
+apturl==0.5.2
+attrs==19.3.0
+Automat==0.8.0
+bcrypt==3.1.7
+blinker==1.4
+bottle==0.12.15
+Brlapi==0.7.0
+certifi==2019.11.28
+chardet==3.0.4
+Click==7.0
+colorama==0.4.3
+command-not-found==0.3
+configobj==5.0.6
+constantly==15.1.0
+cryptography==2.8
+cupshelpers==1.0
+cvxopt==1.3.0
+cycler==0.10.0
+dbus-python==1.2.16
+defer==1.0.6
+distro==1.4.0
+distro-info===0.23ubuntu1
+docker==4.1.0
+duplicity==0.8.12.0
+entrypoints==0.3
+fasteners==0.14.1
+future==0.18.2
+Glances==3.1.3
+httplib2==0.14.0
+hyperlink==19.0.0
+idna==2.8
+incremental==16.10.1
+influxdb==5.2.0
+keyring==18.0.1
+kiwisolver==1.0.1
+language-selector==0.1
+launchpadlib==1.10.13
+lazr.restfulclient==0.14.2
+lazr.uri==1.0.3
+lockfile==0.12.2
+louis==3.12.0
+macaroonbakery==1.3.1
+Mako==1.1.0
+MarkupSafe==1.1.0
+matplotlib==3.1.2
+monotonic==1.5
+netifaces==0.10.4
+networkx==2.8.3
+numpy==1.22.4
+oauthlib==3.1.0
+olefile==0.46
+open-spiel==1.1.1
+paramiko==2.6.0
+pexpect==4.6.0
+Pillow==7.0.0
+ply==3.11
+protobuf==3.6.1
+psutil==5.5.1
+pyasn1==0.4.2
+pyasn1-modules==0.2.1
+pycairo==1.16.2
+pycryptodomex==3.6.1
+pycups==1.9.73
+pycurl==7.43.0.2
+PyGObject==3.36.0
+PyHamcrest==1.9.0
+PyJWT==1.7.1
+pymacaroons==0.13.0
+PyNaCl==1.3.0
+pyOpenSSL==19.0.0
+pyparsing==2.4.6
+pyRFC3339==1.1
+pysmi==0.3.2
+pysnmp==4.4.6
+pystache==0.5.4
+python-apt==2.0.0+ubuntu0.20.4.6
+python-dateutil==2.7.3
+python-debian===0.1.36ubuntu1
+pytz==2019.3
+pyxdg==0.26
+PyYAML==5.3.1
+reportlab==3.5.34
+requests==2.22.0
+requests-unixsocket==0.2.0
+scipy==1.8.1
+screen-resolution-extra==0.0.0
+SecretStorage==2.3.1
+service-identity==18.1.0
+simplejson==3.16.0
+six==1.14.0
+sos==4.1
+ssh-import-id==5.10
+systemd-python==234
+torch==1.7.1+cu110
+torchaudio==0.11.0+cu113
+torchvision==0.8.2+cu110
+Twisted==18.9.0
+typing-extensions==4.2.0
+ubuntu-advantage-tools==27.2
+ubuntu-drivers-common==0.0.0
+ufw==0.36
+unattended-upgrades==0.1
+urllib3==1.25.8
+usb-creator==0.3.7
+wadllib==1.3.3
+websocket-client==0.53.0
+xkit==0.0.0
+zope.interface==4.7.1
